examples/testing/negative_costs-lower_bounds/ex_minus_infinity.ces




eq(a(X), -1 ,[a(X )], [X>=1]).

eq(a(X), 0,[], [X=0]).
